--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -596,9 +596,9 @@ button.main-button:hover {
 .welcome-area .header-text h1 {
   font-weight: 500;
   font-size: 42px;
-  line-height: 78px;
+  line-height: 72px;
   letter-spacing: 1.4px;
-  margin-bottom: 20px;
+  margin-bottom: 36px;
   color: var(--purple) !important;
   text-align: center;
 }
@@ -1640,8 +1640,18 @@ a#standard:hover {
 }
 .chat-blob:focus,
 .chat-blob:hover {
-  transform: scale(1.25);
+  transform: scale(1.2);
 }
+
+.chat-circle {
+  transition: transform 0.3s;
+}
+
+.chat-blob:focus .chat-circle,
+.chat-blob:hover .chat-circle {
+  transform: scale(0.85);
+}
+
 #aboutme a i {
   transition: transform 0.3s linear;
 }
@@ -2012,7 +2022,7 @@ body {
   opacity: 0.7;
 }
 #section10 a {
-  padding-top: 40px;
+  padding-top: 32px;
 }
 #section10 a span {
   position: absolute;
@@ -2109,63 +2119,43 @@ html {
   color: var(--purple-dark);
 }
 @keyframes wave {
-
   0% {
-
     transform: rotate(0deg);
-
   }
 
   10% {
-
     transform: rotate(16deg);
-
   }
 
   20% {
-
     transform: rotate(-6deg);
-
   }
 
   30% {
-
     transform: rotate(16deg);
-
   }
 
   40% {
-
     transform: rotate(-4deg);
-
   }
 
   50% {
-
     transform: rotate(16deg);
-
   }
 
   60% {
-
     transform: rotate(0deg);
-
   }
 
   100% {
-
     transform: rotate(0deg);
-
   }
-
 }
 
 .waving-hand {
-
   animation: wave 2.1s 0.6s infinite;
 
   transform-origin: 75% 75%;
 
   display: inline-block;
-
 }
